2013-07-31  Yao Qi  <yao@codesourcery.com>

	* gdb.trace/backtrace.exp: Don't invoke 'get_exit' and
	'gdb_start'.
	Invoke 'prepare_for_testing' instead of 'gdb_compile'.
	Use gdb_test_no_output to issue commands 'tstart' and 'tstop'.

2013-07-30  Andrew Burgess  <aburgess@broadcom.com>

	* gdb.dwarf2/pieces-optimized-out.exp: Expect "<optimized out>"
	when printing an optimized out value.  Expect an error when using
	an optimized out value in an expression.

2013-07-30  Andrew Burgess  <aburgess@broadcom.com>

	* gdb.dwarf2/pieces-optimized-out.exp: New file.
	* gdb.dwarf2/pieces-optimized-out.c: New file.
	* gdb.dwarf2/pieces-optimized-out.S: New file.

2013-07-30  Muhammad Bilal  <mbilal@codesourcery.com>

	PR gdb/15715
	* gdb.base/setshow.exp: Test that relative paths passed to
	'set history filename' are converted to absolute paths.

2013-07-26  Keith Seitz  <keiths@redhat.com>

	* gdb.mi/mi-var-child-f.exp: Pass f90 to gdb_compile instead
	of f77.
	Allow for compiler variations of integer types.
	Use mi_create_varobj.
	Use mi_list_varobj_children for the immediate children of `array'.
	Add "has_more" attribute for grandchildren test.

2013-07-26  Pedro Alves  <palves@redhat.com>

	* gdb.base/interrupt-noterm.c, gdb.base/interrupt-noterm.exp: New
	files.

2013-07-25  Andrew Burgess  <aburgess@broadcom.com>

	* gdb.mi/mi-reg-undefined.exp: New file.
	* gdb.mi/mi-reg-undefined.c: Likewise.
	* gdb.mi/mi-reg-undefined.S: Likewise.

2013-07-25  Andrew Burgess  <aburgess@broadcom.com>

	* gdb.base/printcmds.exp (test_print_int_arrays): Add tests for x,
	z, o, and t output formats.
	* gdb.base/display.exp: Use 'k' as an undefined format now that
	'z' is defined.

2013-07-24  Doug Evans  <dje@google.com>

	* boards/native-stdio-gdbserver.exp (${board}_build_remote_cmd): Pass
	"--" to switch.

2013-07-24  Yao Qi  <yao@codesourcery.com>

	* gdb.mi/mi-var-cmd.exp: If host is remote, use ${testfile} on
	host.
	* gdb.mi/mi-basics.exp (test_exec_and_symbol_mi_operatons):